<resources>
    <string name="app_name">Hello Geek Brains</string>
    <string name="Myandroid">0</string>
    <string name="nextlayout">NextLayout</string>
    <string name="_7">7</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="rav">=</string>
    <string name="del">÷</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="umn">Х</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="plus">+</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_8">8</string>
    <string name="back">Back</string>
    <string name="next_theme"><![CDATA[>>]]></string>
    <string name="AppThemeLight">AppThemeLight</string>
    <string name="choice_theme">choice theme</string>
    <string name="light_theme">Theme Vaz 21099</string>
    <string name="night_theme">Theme Vaz 2106</string>
</resources>