<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/fon_calc">


    <Space
        android:layout_width="match_parent"
        android:layout_height="160dp" />
<EditText
    android:layout_width="300dp"
    android:layout_height="80dp"

    android:inputType="numberDecimal"
    android:layout_gravity="center"
    tools:ignore="Autofill,LabelFor" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp" />


    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ButtonStyle"
        android:text="@string/_7"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:text="@string/_8"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:text="@string/_9"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del"
            tools:ignore="ButtonStyle" />
</LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:text="@string/_4"/>
        <Button
            android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/_5"/>
        <Button
            android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/_6"/>
        <Button
            android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/umn"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/_1"/>
        <Button
        android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/_2"/>
        <Button
        android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/_3"/>
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
        android:text="@string/minus"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/c"/>
        <Button
            android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/_0"/>
        <Button
            android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/rav"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:text="@string/plus"/>


</LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/back_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
</LinearLayout>