<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ff9800"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <EditText
        android:focusable="false"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="right"
        android:paddingTop="19dp"
        android:text="00000"
        android:textSize="29sp"
 />

    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_7"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:paddingLeft="16dp"
            android:layout_marginLeft="39dp"
            android:text="@string/_7"
            android:textSize="25sp" />
        <Button
            android:id="@+id/_8"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:text="@string/_8"
            android:textSize="25sp" />
        <Button
            android:id="@+id/_9"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="29dp"
            android:text="@string/_9"
            android:textSize="25sp" />
        <Button
            android:id="@+id/button_del"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:text="@string/del"
            android:backgroundTint="@color/white"
            android:textSize="25sp" />




    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_4"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="39dp"
            android:backgroundTint="@color/white"
            android:text="@string/_4"
            android:textSize="25sp" />
        <Button
            android:id="@+id/_5"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:backgroundTint="@color/white"
            android:text="@string/_5"
            android:textSize="25sp" />
        <Button
            android:id="@+id/_6"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:text="@string/_6"
            android:backgroundTint="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/button_umn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:backgroundTint="@color/white"
            android:text="@string/umn"
            android:textSize="25sp" />


    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_1"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="39dp"
            android:backgroundTint="@color/white"
            android:text="@string/_1"
            android:textSize="25sp" />
        <Button
            android:id="@+id/_2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:backgroundTint="@color/white"
            android:text="@string/_2"
            android:textSize="25sp" />
        <Button
            android:id="@+id/_3"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:text="@string/_3"
            android:backgroundTint="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/button_minus"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:backgroundTint="@color/white"
            android:text="@string/minus"
            android:textSize="25sp" />


    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="39dp"
            android:backgroundTint="@color/white"
            android:text="C"
            android:textSize="25sp" />
        <Button
            android:id="@+id/_0"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:backgroundTint="@color/white"
            android:text="@string/_0"
            android:textSize="25sp" />
        <Button
            android:id="@+id/button_equal"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:layout_marginLeft="29dp"
            android:backgroundTint="@color/white"
            android:layout_marginTop="6sp"
            android:text="@string/rav"
            android:textSize="35sp" />
        <Button
            android:id="@+id/button_plus"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingLeft="16dp"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="29dp"
            android:text="@string/plus"
            android:textSize="25sp" />


    </LinearLayout>





</LinearLayout>